[gd_scene load_steps=2 format=3 uid="uid://cg3e6vl8r45gh"]

[ext_resource type="Script" uid="uid://d0k5ctjwcylte" path="res://hud.gd" id="1_hsohv"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hsohv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimerLabel" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="PromptLabel" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="QTEContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="QTENameLabel" type="Label" parent="Control/QTEContainer"]
layout_mode = 2

[node name="QTEProgress" type="TextureProgressBar" parent="Control/QTEContainer"]
layout_mode = 2

[node name="QTEFeedbackLabel" type="Label" parent="Control/QTEContainer"]
layout_mode = 2
